# virtual-assistant-desktop

./: .eslintrc.json  .gitignore  .gitmodules  .mcp.json  AGENT_INTEGRATION_PLAN.md  ARCHITECTURE.md  CLAUDE-CODE-GUIDE.md  CLAUDE.md  EMBEDDED_QWEN_FIX_PLAN.md  LESSONS.md  MOCAP_STUDIO_PLAN.md  README.md  SCENE_PROPS_PLAN.md  SPEC.md  USAGE.md  agent-bubble.html  animation-guide.md  electron-builder.yml  index.html  mocap-studio.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.html  spike-mediapipe.html  spike-vrma-export.html  tailwind.config.ts  tsconfig.electron.json  tsconfig.json  video-converter-plan.md  video-converter.html  vite.config.ts  vrm-picker.html
.claude/: settings.json  settings.local.json
docs/: vrm-expression-guide.md
electron/: CLAUDE.md  cursorTracker.ts  fileManager.ts  ipcHandlers.ts  keyboardMonitor.ts  main.ts  mocapStudioWindow.ts  preload.ts  settingsWindow.ts  spikeWindow.ts  systemTray.ts  videoConverterWindow.ts  vrmPickerWindow.ts  windowMonitor.ts  windowRegion.ts
fbx/: Femme Peek Around Corner.fbx  Gathering Objects.fbx  Idle Transition.fbx  Jump.fbx  Leaning On A Wall.fbx  Look Around.fbx  No.fbx  Sitting 02.fbx  Sitting Clap.fbx  Sitting Disbelief.fbx  Sitting Female 01.fbx  Sitting Female 02.fbx  Sitting Female 03.fbx  Sitting Female 04.fbx  Sitting.fbx  (+27 more)
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: file_manager.rs  lib.rs  main.rs  system_tray.rs  types.rs  window_monitor.rs
src-tauri/src/commands/: file_commands.rs  mod.rs  window_commands.rs
(+407 files in other folders)
